@@ -1,58 +1,53 @@
 package net.blockomorph.screens;
 
-import net.blockomorph.utils.*;
-import net.blockomorph.BlockomorphMod;
-import net.blockomorph.network.*;
-import net.blockomorph.screens.*;
-import net.blockomorph.utils.config.*;
-import net.blockomorph.core.MainBus;
-
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.client.Minecraft;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.nbt.TagParser;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.block.state.properties.Property;
-import net.minecraft.world.level.block.state.properties.BooleanProperty;
-import net.minecraft.world.level.block.state.properties.IntegerProperty;
-import net.minecraft.world.level.block.state.properties.EnumProperty;
-import net.minecraft.client.renderer.RenderType;
-import net.minecraft.client.sounds.SoundManager;
-import net.minecraft.client.resources.sounds.SimpleSoundInstance;
-import net.minecraft.sounds.SoundEvents;
-import net.minecraft.network.chat.Component;
-import net.minecraft.client.renderer.MultiBufferSource;
-import net.minecraft.core.BlockPos;
-import net.minecraft.util.RandomSource;
-import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.client.renderer.blockentity.BlockEntityRenderDispatcher;
-import net.minecraft.client.renderer.block.BlockRenderDispatcher;
-import net.minecraft.client.renderer.texture.OverlayTexture;
-import net.minecraft.world.level.block.entity.BlockEntity;
-import net.minecraft.world.level.block.EntityBlock;
-import net.minecraft.client.renderer.LightTexture;
-import net.minecraft.client.renderer.blockentity.BlockEntityRenderer;
-import net.minecraft.client.gui.components.EditBox;
-
+import com.mojang.blaze3d.systems.RenderSystem;
+import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.math.Axis;
-import com.mojang.blaze3d.vertex.PoseStack;
-import com.mojang.blaze3d.systems.RenderSystem;
-
+import net.blockomorph.core.MainBus;
+import net.blockomorph.network.ServerBoundBlockMorphPacket;
+import net.blockomorph.utils.MorphUtils;
+import net.blockomorph.utils.PlayerAccessor;
+import net.blockomorph.utils.SavedBlock;
+import net.blockomorph.utils.config.Config;
+import net.fabricmc.fabric.api.client.networking.v1.ClientPlayNetworking;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.components.EditBox;
+import net.minecraft.client.gui.components.ImageButton;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.renderer.ItemBlockRenderTypes;
+import net.minecraft.client.renderer.LightTexture;
+import net.minecraft.client.renderer.MultiBufferSource;
+import net.minecraft.client.renderer.block.BlockRenderDispatcher;
+import net.minecraft.client.renderer.blockentity.BlockEntityRenderDispatcher;
+import net.minecraft.client.renderer.blockentity.BlockEntityRenderer;
+import net.minecraft.client.renderer.texture.OverlayTexture;
+import net.minecraft.client.resources.sounds.SimpleSoundInstance;
+import net.minecraft.client.sounds.SoundManager;
+import net.minecraft.core.BlockPos;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.TagParser;
+import net.minecraft.network.chat.Component;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.sounds.SoundEvents;
+import net.minecraft.util.RandomSource;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.EntityBlock;
+import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BooleanProperty;
+import net.minecraft.world.level.block.state.properties.EnumProperty;
+import net.minecraft.world.level.block.state.properties.IntegerProperty;
+import net.minecraft.world.level.block.state.properties.Property;
 import org.joml.Matrix4f;
 
-import java.util.Optional;
-import java.util.Collection;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
-import java.util.Objects;
-import net.fabricmc.fabric.api.client.networking.v1.ClientPlayNetworking;
-import net.minecraft.client.renderer.ItemBlockRenderTypes;
-import net.minecraft.client.gui.components.ImageButton;
+import java.util.Optional;
 
 public class BlockMorphConfigScreen extends Screen {
    private static final ResourceLocation texture = new ResourceLocation("blockomorph:textures/screens/morph_config_gui.png");
@@ -304,7 +299,7 @@ public class BlockMorphConfigScreen extends Screen {
    	       if (type > 0 && value < intes.get(ints.size() - 1)) {
    	    	  state = state.setValue(prop, value + 1);
    	    	  sound.play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
-           } else if (type < 0 && value > intes.get(0)) {
+           } else if (type < 0 && value > intes.getFirst()) {
               state = state.setValue(prop, value - 1);
               sound.play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
            }
@@ -333,7 +328,7 @@ public class BlockMorphConfigScreen extends Screen {
    	    	if (!flag && prop == null) {
    	    		if (x > this.leftPos + 93 && x < this.leftPos + 93 + 67 && y > this.topPos + 120 && y < this.topPos + 130) {
    	    			if (Config.getInstance() != null && (boolean)Config.getInstance().getValue("advancedMode")) {
-   	    				ClientPlayNetworking.send(MainBus.MORPH_PACKET, ServerBoundBlockMorphPacket.create(this.playerState, this.playerTag, !this.mb));
+   	    				MorphUtils.sendServer(ServerBoundBlockMorphPacket.create(this.playerState, this.playerTag, !this.mb));
    	    			    sound.play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
    	    			}
    	    		}
@@ -415,7 +410,7 @@ public class BlockMorphConfigScreen extends Screen {
    }
 
    private void send(BlockState blockState, CompoundTag tag) {
-   	    ClientPlayNetworking.send(MainBus.MORPH_PACKET, ServerBoundBlockMorphPacket.create(blockState, tag));
+   	    MorphUtils.sendServer(ServerBoundBlockMorphPacket.create(blockState, tag));
    }
 
    private void validSave(String s) {
